Steals project file from Faraday and updates